fix to handle various size swatch images * removed stretching of images * removed max height of 28px for swatches * removed constraint of 1/3, 1/6

--- a/app/styles/components/vn/_labeled-radio.scss
+++ b/app/styles/components/vn/_labeled-radio.scss
@@ -2,7 +2,6 @@
 
   &--tiles {
 
-    min-width: percentage(1/3);
     padding: 0 2.5px;
     margin-bottom: 5px;
     cursor: pointer;
@@ -25,8 +24,6 @@
 
     &__image {
       position: relative; // stacks over color
-      width: 100%;
-      height: 28px;
       border: 2px solid white;
     }
 
@@ -56,9 +53,6 @@
   }
 
   &--swatch {
-
-    min-width: percentage(1/6);
-    max-width: percentage(1/6);
 
     &__text {
       display: none;
